fix(login): use dummy user data
